Userstory:1237899 MultipleModulescreation and componets integration

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+.class1
+{
+    background-color: aqua;
+    width:500px;
+    height:300px;
+    margin:20px;
+    float: left;
+}
+.class2
+{
+    background-color:orange;
+    width:200px;
+    height:100px;
+    margin:20px;
+    float: left;
+}
